object_detection now publishes images to rviz

--- a/detection/CMakeLists.txt
+++ b/detection/CMakeLists.txt
@@ -51,7 +51,9 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate messages in the 'msg' folder
 add_message_files(
    FILES
-   vector_array.msg
+   centerpointArray.msg
+   boundingboxArray.msg
+   boundingboxMsg.msg
  )
 
 ## Generate services in the 'srv' folder
