--- a/detection/CMakeLists.txt
+++ b/detection/CMakeLists.txt
@@ -54,7 +54,7 @@ add_message_files(
    centerpointArray.msg
    boundingboxArray.msg
    boundingboxMsg.msg
-   objectPoseStamped.msg
+   objectPoseStampedLst.msg
  )
 
 ## Generate services in the 'srv' folder
