--- a/memory/CMakeLists.txt
+++ b/memory/CMakeLists.txt
@@ -62,6 +62,7 @@ find_package(catkin REQUIRED COMPONENTS
 add_service_files(
   FILES
   Moveto.srv
+  NotPair.srv
 )
 
 ## Generate actions in the 'action' folder
