--- a/mapping_and_planning/CMakeLists.txt
+++ b/mapping_and_planning/CMakeLists.txt
@@ -108,10 +108,10 @@ generate_messages(
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES mapping_and_planning
-#  CATKIN_DEPENDS geometry_msgs robp_msgs roscpp rospy sensor_msgs std_msgs
-#  DEPENDS system_lib
+ INCLUDE_DIRS include
+ LIBRARIES mapping_and_planning
+ CATKIN_DEPENDS geometry_msgs robp_msgs roscpp rospy sensor_msgs std_msgs
+ DEPENDS system_lib
 )
 
 ###########
