--- a/robot_arm/CMakeLists.txt
+++ b/robot_arm/CMakeLists.txt
@@ -105,10 +105,10 @@ generate_messages(
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES robot_arm
-#  CATKIN_DEPENDS geometry_msgs hiwonder_servo_msgs rospy trajectory_msgs
-#  DEPENDS system_lib
+ INCLUDE_DIRS include
+ LIBRARIES robot_arm
+ CATKIN_DEPENDS geometry_msgs hiwonder_servo_msgs rospy trajectory_msgs
+ DEPENDS system_lib
 )
 
 ###########
