--- a/robot_arm/CMakeLists.txt
+++ b/robot_arm/CMakeLists.txt
@@ -58,8 +58,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate services in the 'srv' folder
 add_service_files(
   FILES
-  pick.srv
-  place.srv
+  Pick.srv
+  Place.srv
 )
 
 ## Generate actions in the 'action' folder
@@ -69,11 +69,11 @@ add_service_files(
 #   Action2.action
 # )
 
-## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   geometry_msgs#   hiwonder_servo_msgs#   trajectory_msgs
-# )
+# Generate added messages and services with any dependencies listed here
+generate_messages(
+  DEPENDENCIES
+  geometry_msgs   hiwonder_servo_msgs   trajectory_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -105,10 +105,10 @@ add_service_files(
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES robot_arm
-#  CATKIN_DEPENDS geometry_msgs hiwonder_servo_msgs rospy trajectory_msgs
-#  DEPENDS system_lib
+ INCLUDE_DIRS include
+ LIBRARIES robot_arm
+ CATKIN_DEPENDS geometry_msgs hiwonder_servo_msgs rospy trajectory_msgs
+ DEPENDS system_lib
 )
 
 ###########
