--- a/msg_srv_pkg/package.xml
+++ b/msg_srv_pkg/package.xml
@@ -67,6 +67,20 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  
+  <build_depend>trajectory_msgs</build_depend>
+  <build_export_depend>trajectory_msgs</build_export_depend>
+  <exec_depend>trajectory_msgs</exec_depend>
+  
+  <build_export_depend>hiwonder_servo_msgs</build_export_depend>
+  <build_depend>hiwonder_servo_msgs</build_depend>
+  <exec_depend>hiwonder_servo_msgs</exec_depend>
+
+  <build_depend>message_generation</build_depend>
+  <exec_depend>message_runtime</exec_depend>
+ 
+  
+  
 
 
   <!-- The export tag contains other, unspecified, tags -->
