--- a/point_follower/CMakeLists.txt
+++ b/point_follower/CMakeLists.txt
@@ -12,7 +12,6 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
-  message_generation
 )
 
 ## System dependencies are found with CMake's conventions
@@ -56,11 +55,11 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 # Generate services in the 'srv' folder
-add_service_files(
-  FILES
-  Node.srv
-  Moveto.srv
-)
+# add_service_files(
+#   FILES
+#   Node.srv
+#   Moveto.srv
+# )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -70,11 +69,11 @@ add_service_files(
 # )
 
 # Generate added messages and services with any dependencies listed here
-generate_messages(
-  DEPENDENCIES
-  geometry_msgs
-  std_msgs
-)
+# generate_messages(
+#   DEPENDENCIES
+#   geometry_msgs
+#   std_msgs
+# )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
