--- a/robot_arm/CMakeLists.txt
+++ b/robot_arm/CMakeLists.txt
@@ -8,11 +8,10 @@ project(robot_arm)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  rospy
   geometry_msgs
   hiwonder_servo_msgs
-  rospy
   trajectory_msgs
-  message_generation
 )
 
 ## System dependencies are found with CMake's conventions
@@ -56,11 +55,11 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate services in the 'srv' folder
-add_service_files(
-  FILES
-  Pick.srv
-  Place.srv
-)
+# add_service_files(
+#   FILES
+#   pick.srv
+#   place.srv
+# )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -69,11 +68,11 @@ add_service_files(
 #   Action2.action
 # )
 
-# Generate added messages and services with any dependencies listed here
-generate_messages(
-  DEPENDENCIES
-  geometry_msgs   hiwonder_servo_msgs   trajectory_msgs
-)
+## Generate added messages and services with any dependencies listed here
+# generate_messages(
+#   DEPENDENCIES
+#   geometry_msgs#   hiwonder_servo_msgs#   trajectory_msgs
+# )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -105,10 +104,10 @@ generate_messages(
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
- INCLUDE_DIRS include
- LIBRARIES robot_arm
- CATKIN_DEPENDS geometry_msgs hiwonder_servo_msgs rospy trajectory_msgs
- DEPENDS system_lib
+#  INCLUDE_DIRS include
+#  LIBRARIES robot_arm
+#  CATKIN_DEPENDS geometry_msgs hiwonder_servo_msgs rospy trajectory_msgs
+#  DEPENDS system_lib
 )
 
 ###########
