--- a/mapping_and_planning/CMakeLists.txt
+++ b/mapping_and_planning/CMakeLists.txt
@@ -105,11 +105,16 @@ find_package(catkin REQUIRED COMPONENTS
 ## LIBRARIES: libraries you create in this project that dependent projects also need
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
+# catkin_package(
+#  INCLUDE_DIRS include
+#  LIBRARIES mapping_and_planning
+#  CATKIN_DEPENDS geometry_msgs robp_msgs roscpp rospy sensor_msgs std_msgs
+#  DEPENDS system_lib
+# )
+
+
 catkin_package(
- INCLUDE_DIRS include
- LIBRARIES mapping_and_planning
  CATKIN_DEPENDS geometry_msgs robp_msgs roscpp rospy sensor_msgs std_msgs
- DEPENDS system_lib
 )
 
 ###########
