--- a/msg_srv_pkg/CMakeLists.txt
+++ b/msg_srv_pkg/CMakeLists.txt
@@ -65,6 +65,7 @@ add_service_files(
   Node.srv
   Pick.srv
   Place.srv
+  NoCollision.srv
 )
 
 ## Generate actions in the 'action' folder
@@ -115,11 +116,16 @@ generate_messages(
 ## LIBRARIES: libraries you create in this project that dependent projects also need
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
+# catkin_package(
+#  INCLUDE_DIRS include
+#  LIBRARIES msg_srv_pkg
+#  CATKIN_DEPENDS geometry_msgs robp_msgs roscpp rospy sensor_msgs std_msgs hiwonder_servo_msgs trajectory_msgs
+#  DEPENDS system_lib
+# )
+
+
 catkin_package(
- INCLUDE_DIRS include
- LIBRARIES msg_srv_pkg
  CATKIN_DEPENDS geometry_msgs robp_msgs roscpp rospy sensor_msgs std_msgs hiwonder_servo_msgs trajectory_msgs
- DEPENDS system_lib
 )
 
 ###########
