--- a/msg_srv_pkg/CMakeLists.txt
+++ b/msg_srv_pkg/CMakeLists.txt
@@ -58,7 +58,7 @@ add_message_files(
   objectPoseStampedLst.msg
 )
 
-## Generate services in the 'srv' folder
+## Generate services in the 'srv' folder boom
 add_service_files(
   FILES
   Moveto.srv
