Removed all custom services except for Request.srv

--- a/msg_srv_pkg/CMakeLists.txt
+++ b/msg_srv_pkg/CMakeLists.txt
@@ -58,11 +58,9 @@ add_message_files(
   objectPoseStampedLst.msg
 )
 
-## Generate services in the 'srv' folder
+## Generate services in the 'srv' folder boom
 add_service_files(
   FILES
-  Moveto.srv
-  Pick.srv
   Request.srv
 )
 
