--- a/msg_srv_pkg/CMakeLists.txt
+++ b/msg_srv_pkg/CMakeLists.txt
@@ -17,6 +17,8 @@ find_package(catkin REQUIRED COMPONENTS
   message_generation
   hiwonder_servo_msgs
   trajectory_msgs
+  nav_msgs
+  actionlib_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -66,11 +68,11 @@ add_service_files(
 )
 
 ## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
+add_action_files(
+  DIRECTORY action
+  FILES
+  Explore.action
+)
 
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
@@ -82,6 +84,8 @@ generate_messages(
   sensor_msgs
   hiwonder_servo_msgs
   trajectory_msgs
+  nav_msgs
+  actionlib_msgs
 )
 
 ################################################
@@ -122,7 +126,7 @@ generate_messages(
 
 
 catkin_package(
- CATKIN_DEPENDS geometry_msgs robp_msgs roscpp rospy sensor_msgs std_msgs hiwonder_servo_msgs trajectory_msgs
+ CATKIN_DEPENDS geometry_msgs robp_msgs roscpp rospy sensor_msgs std_msgs hiwonder_servo_msgs trajectory_msgs nav_msgs actionlib_msgs
 )
 
 ###########
