--- a/msg_srv_pkg/package.xml
+++ b/msg_srv_pkg/package.xml
@@ -55,6 +55,10 @@
   <build_depend>rospy</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>nav_msgs</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
+  <build_export_depend>nav_msgs</build_export_depend>
+  <build_export_depend>actionlib_msgs</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>robp_msgs</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
@@ -67,6 +71,9 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>nav_msgs</exec_depend>
+  <exec_depend>actionlib_msgs</exec_depend>
+
   
   <build_depend>trajectory_msgs</build_depend>
   <build_export_depend>trajectory_msgs</build_export_depend>
